# sudoku

./: .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
src/: board.hpp  main.cpp  qt-test.cpp  solver.hpp  solvercbc.hpp  test  test.cpp  widget.cpp  widget.hpp
